fix table alignment

--- a/src/css/definition-doc.css
+++ b/src/css/definition-doc.css
@@ -235,6 +235,7 @@
 .definition-doc table td {
   border: 1px solid var(--color-doc-content-border);
   padding: 0.5rem;
+  vertical-align: top;
 }
 
 .definition-doc .folded {
